--- a/01-appnotes/style.css
+++ b/01-appnotes/style.css
@@ -45,11 +45,11 @@ body {
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    transition: .3s ease-in-out;
+    transition: 0.3s ease-in-out;
     position: relative;
 
     &::before {
-        content: '';
+        content: "";
         position: absolute;
         width: 100%;
         height: 4px;
@@ -57,7 +57,7 @@ body {
         bottom: -4px;
         transform-origin: right;
         transform: scaleX(1);
-        transition: transform .3s ease-in-out;
+        transition: transform 0.3s ease-in-out;
     }
 
     &&:hover::before {
@@ -129,7 +129,7 @@ body {
 
 .note {
     display: flex;
-    gap: .5rem;
+    gap: 0.5rem;
     flex-wrap: wrap;
     align-items: center;
     position: relative;
@@ -201,14 +201,14 @@ body {
     display: flex;
     justify-content: flex-end;
     padding: 1rem;
-    gap: .5rem;
+    gap: 0.5rem;
 }
 
 .options__addfavorite,
 .options__delete,
 .createnote__exit__button {
-    transition: .3s ease-in-out;
-    padding: .5rem;
+    transition: 0.3s ease-in-out;
+    padding: 0.5rem;
     border: 1px solid #0001;
     border-radius: 9999rem;
 }
@@ -263,12 +263,12 @@ body {
 .createnote__textarea {
     font-family: var(--font-family);
     font-size: var(--font-size-m);
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     outline: 2px solid var(--color-secondary);
     outline-offset: 3px;
     border: 0;
     background-color: var(--bg-secondary);
-    padding: .6rem 1rem;
+    padding: 0.6rem 1rem;
     transition: 0.12s ease-in-out;
 }
 
