--- a/01-appnotes/style.css
+++ b/01-appnotes/style.css
@@ -136,6 +136,8 @@ body {
 }
 
 .note__action {
+    width: 100%;
+    height: 100%;
     background-color: var(--bg-secondary);
     border: 1px solid #0001;
     padding: 2rem;
@@ -166,9 +168,11 @@ body {
 }
 
 .note__article {
+    width: 100%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
     gap: 1rem;
-    flex-wrap: wrap;
     align-items: flex-start;
     justify-content: flex-start;
     text-align: left;
@@ -286,4 +290,11 @@ body {
 .createnote__submit {
     padding: 1rem;
     font-size: var(--font-size-m);
+}
+
+@media only screen and (max-width: 800px) {
+    .notes__list {
+        display: flex;
+        flex-direction: column;
+    }
 }
