Fix responsive design 400px

--- a/05-booktime/style.css
+++ b/05-booktime/style.css
@@ -174,7 +174,7 @@ body {
 
 @media only screen and (max-width: 400px) {
     .file {
-        width: auto;
+        width: 100%;
         height: auto;
         gap: 1rem;
     }
