--- a/06-monkeytype/src/main.css
+++ b/06-monkeytype/src/main.css
@@ -4,5 +4,5 @@
 
 @font-face {
     font-family: "JetBrains Mono";
-    src: url("../fonts/jetbrains.ttf") format('truetype');
+    src: url("../fonts/jetbrains.ttf") format("truetype");
 }
