--- a/07-tesla-clone/src/main.css
+++ b/07-tesla-clone/src/main.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "Universal Sans";
+    src: url("/fonts/universal-sans.woff2") format("woff2")
+}
