--- a/07-tesla-clone/src/main.css
+++ b/07-tesla-clone/src/main.css
@@ -4,12 +4,14 @@
 
 @font-face {
     font-family: "Universal Sans";
-    src: url("/fonts/universal-sans.woff2") format("woff2")
+    src: url("/fonts/universal-sans.woff2") format("woff2");
 }
 
 @layer components {
     .transition-header {
-        transition: top 0.3s ease-in-out, background-color 0.3s ease-in-out;
+        transition:
+            top 0.3s ease-in-out,
+            background-color 0.3s ease-in-out;
     }
 }
 
